objects/Sales_Invoice_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Recordkey__c</fullName>
        <label>Payment Recordkey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <label>Sales Invoice</label>
        <referenceTo>Sales_Invoice__c</referenceTo>
        <relationshipName>Sales_Invoice_Payment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sales Invoice Payment</label>
    <nameField>
        <label>Sales Invoice Payment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>